[tool.poetry]
name = "cornflower"
version = "0.1.0"
description = "Library for writting simple AMQP handlers with type hints and pydantic support"
authors = ["jakub-figat"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
kombu = "^5.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
