[tool.poetry]
name = "cornflower"
version = "0.1.0"
description = "Library for writting simple AMQP handlers with type hints and pydantic support"
authors = ["jakub-figat"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
kombu = "^5.2.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.0.1"


[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 119
profile = "black"
skip_glob = ["env/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
